updated various requests, primarily regarding the blue sky call, easy chair link fixed.

--- a/Call_Blue_Sky.html
+++ b/Call_Blue_Sky.html
@@ -148,33 +148,31 @@ http://www.templatemo.com/tm-406-flex
                     <div class="heading-section col-md-12 text-left">
 	    <h2>Call for Blue Sky Ideas</h2>
 	    <p>
-	    This year, with support from the Computing Community Consortium (CCC), ACM Hypertext is organizing a special <a href="https://cra.org/ccc/visioning/blue-sky/">Blue Sky Ideas</a> Track. The emphasis of this track is on visionary ideas, long-term challenges, and new research opportunities. This track is designed to overcome the constraints of the traditional review process, and will serve as an incubator for innovative approaches, risky and provocative ideas, and to propose challenges and opportunities in the near future. Submissions to this track are limited to a maximum of 4 pages, using the same <a href="http://www.acm.org/publications/proceedings-template">submission template and are to be submitted using the same <a href="https://easychair.org/my/conference.cgi?conf=ht18;a=12905039">submission site</a>. 
+	    This year, with support from the Computing Community Consortium (CCC), ACM Hypertext is organizing a special <a href="https://cra.org/ccc/visioning/blue-sky/">Blue Sky Ideas</a> Track. The emphasis of this track is on visionary ideas, long-term challenges, and new research opportunities. This track is designed to overcome the constraints of the traditional review process, and will serve as an incubator for innovative approaches, risky and provocative ideas, and to propose challenges and opportunities in the near future. Submissions to this track are limited to a maximum of 4 pages, using the same submission <a href="http://www.acm.org/publications/proceedings-template">template</a> and are to be submitted using the same <a href="https://easychair.org/conferences/?conf=ht18">submission site</a>. 
 		    Thanks to CCC sponsorship, the top 3 papers submitted to this track will be awarded with travel grants of $1000, $750 and $500 respectively. Successful submissions will be published in the regular proceedings. All submissions to this special track will be evaluated by a dedicated committee consisting of Krishna Gummadi, David Millard, Charlie Hargood, Nishanth Sastry and Ingmar Weber.
 
  </p>
-                    </div> <!-- /.heading-section -->
-                </div> <!-- /.row -->
-
-            </div> <!-- /.container -->
-        </div> <!-- /#our-team -->
-         <div class="content-section" id="News" name="News">
-            <div class="container">
-                <div class="row">
-                    <div class="heading-section col-md-12 text-left">
-                        <h2>Important Information</h2>
+                        <h3>Deadlines</h3>
                         <ul>
-                            <li><h3> Submission Deadline :<a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=2&day=2&hour=23&min=59&sec=59&msg=Due%20date%3a%20Blue%20Sky">February 2nd 2018</a> </h3></li>
-                            <li><h3> Notification Due by :<a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=4&day=2&hour=23&min=59&sec=59&msg=Acceptance%20date%3a%20Blue%20Sky"> April 2nd 2018 </a> </h3></li>
-                            <li><h3> Camera Ready Due by :<a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=5&day=1&hour=23&min=59&sec=59&msg=Camera%20Ready%3a%20Blue%20Sky"> May 1st 2018 </a> </h3></li>
-                            <li><h3> Submissions to be done on our <a href="https://easychair.org/account/signin.cgi?timeout=1;key=63054552.eOcq44KCdhw0li5R"> Easy Chair website </a> </h3></li>
+                            <li>Submission Deadline :<a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=3&day=2&hour=23&min=59&sec=59&msg=Due%20date%3a%20Blue%20Sky">March 2nd 2018</a> </li>
+                            <li> Notification Due by :<a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=4&day=2&hour=23&min=59&sec=59&msg=Acceptance%20date%3a%20Blue%20Sky"> April 2nd 2018 </a> </li>
+                            <li> Camera Ready Due by :<a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=5&day=1&hour=23&min=59&sec=59&msg=Camera%20Ready%3a%20Blue%20Sky"> May 1st 2018 </a> </li>
+                            <li> Submissions to be done on our <a href="https://easychair.org/conferences/?conf=ht18"> Easy Chair website </a> </li>
 
-                        </ul>
+			</ul>
+		<h2>Sponsors</h2>
+			<!--p>Hypertext is supported by:</p-->
+			<table>
+				<tr><td><a href="https://cra.org/ccc/visioning/blue-sky/" target="_blank" title=""><img src="https://ht.acm.org/ht2018/images/ccc.jpg" width="250" alt="ACM - Association for Computing Machinery"></a></td>
+			</table>
+
 
                     </div> <!-- /.heading-section -->
                 </div> <!-- /.row -->
 
             </div> <!-- /.container -->
         </div> <!-- /#our-team -->
+                        </ul>
 
         <div id="footer">
             <div class="container">
