--- a/Call_Research_Papers.html
+++ b/Call_Research_Papers.html
@@ -148,7 +148,7 @@ http://www.templatemo.com/tm-406-flex
                     <div class="heading-section col-md-12 text-left">
 	    <h2>Call for Research Papers</h2>
 	    <p>
-	    Papers must be submitted in PDF according to the new ACM format published in <a href="http://www.acm.org/publications/proceedings-template">ACM guidelines</a>, selecting the generic "sigconf" template and submitted in PDF format via <a href="https://easychair.org/my/conference.cgi?conf=ht18;a=12905039">EasyChair</a>. Submissions will be double blind, and care must be taken to anonymize submissions. Papers will also be required to select at least one and up to three keywords on EasyChair to allow better assignment of reviewers. The keywords will be based on the indicative (but not prescriptive) list of topics of interest as listed below, in accordance with the themes of HT 2018:
+	    Papers must be submitted in PDF according to the new ACM format published in <a href="http://www.acm.org/publications/proceedings-template">ACM guidelines</a>, selecting the generic "sigconf" template and submitted in PDF format via <a href="https://easychair.org/conferences/?conf=ht18">EasyChair</a>. Submissions will be double blind, and care must be taken to anonymize submissions. Papers will also be required to select at least one and up to three keywords on EasyChair to allow better assignment of reviewers. The keywords will be based on the indicative (but not prescriptive) list of topics of interest as listed below, in accordance with the themes of HT 2018:
 
 	    </p>
         <h3><a name="social_networks" id="cfp_social_networks">Hyper Society (Social Networks and Digital Humanities)</a></h3>
