--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ http://www.templatemo.com/tm-406-flex
                                     <p>Baltimore, Maryland</p>
                                     <p>9-12 July, 2018</p>
                                     <a href="#About" class="slider-btn">Important Dates</a>
-                                    <a href="https://easychair.org/account/signin.cgi?timeout=1;key=63054552.eOcq44KCdhw0li5R" target="_blank" class="slider-btn">Submission Site</a>
+                                    <a href="https://easychair.org/conferences/?conf=ht18" target="_blank" class="slider-btn">Submission Site</a>
                                 </div>
                             </li>
                         </ul>
@@ -205,6 +205,9 @@ http://www.templatemo.com/tm-406-flex
 		<p><span><b>Paper submission deadline: <a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180202T235959&p0=256&msg=Hypertext+2018+paper+submission+deadline&font=cursive">2nd February 2018</a></b></span><br />
                         <span>Acceptance notification: 2nd April 2018</span><br />
                         <span>Camera ready due:  1st May 2018</span><br />
+
+			<p><span><b>Blue sky ideas submission deadline: <a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=3&day=2&hour=23&min=59&sec=59&msg=Due%20date%3a%20Blue%20Sky">2nd March 2018</a></b></span><br />
+		<p><span>Blue sky ideas acceptance: 2nd April 2018</span><br />
                         <p><strong>Conference:</strong> 9-12 July 2018</p>
                         <p><em><strong>All the deadlines are at 23:59 <a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180202T235959&p0=256&msg=Hypertext+2018+paper+submission+deadline&font=cursive" target="_blank" rel="noopener">Hawaii Time</a>.</strong></em></p>
                     </div> <!-- /.col-md-4 -->
@@ -396,7 +399,7 @@ http://www.templatemo.com/tm-406-flex
     <div class="research" id="research" style="display:none" >
 	    <h2>Call for Research Papers</h2>
 	    <p>
-	    Papers must be submitted in PDF according to the new ACM format published in <a href="http://www.acm.org/publications/proceedings-template">ACM guidelines</a>, selecting the generic "sigconf" template and submitted in PDF format via <a href="https://easychair.org/my/conference.cgi?conf=ht18;a=12905039">EasyChair</a>. Submissions will be double blind, and care must be taken to anonymize submissions. Papers will also be required to select at least one and up to three keywords on EasyChair to allow better assignment of reviewers. The keywords will be based on the indicative (but not prescriptive) list of topics of interest as listed below, in accordance with the themes of HT 2018:
+	    Papers must be submitted in PDF according to the new ACM format published in <a href="http://www.acm.org/publications/proceedings-template">ACM guidelines</a>, selecting the generic "sigconf" template and submitted in PDF format via <a href="https://easychair.org/conferences/?conf=ht18">EasyChair</a>. Submissions will be double blind, and care must be taken to anonymize submissions. Papers will also be required to select at least one and up to three keywords on EasyChair to allow better assignment of reviewers. The keywords will be based on the indicative (but not prescriptive) list of topics of interest as listed below, in accordance with the themes of HT 2018:
 
 	    </p>
         <h3><a name="social_networks" id="cfp_social_networks">Hyper Society (Social Networks and Digital Humanities)</a></h3>
@@ -528,9 +531,25 @@ http://www.templatemo.com/tm-406-flex
 <div class="bluesky" style="display:none;">
 	    <h2>Call for Blue Sky Ideas</h2>
 	    <p>
-	    This year, with support from the Computing Community Consortium (CCC), ACM Hypertext is organizing a special <a href="https://cra.org/ccc/visioning/blue-sky/">Blue Sky Ideas</a> Track. The emphasis of this track is on visionary ideas, long-term challenges, and new research opportunities. This track is designed to overcome the constraints of the traditional review process, and will serve as an incubator for innovative approaches, risky and provocative ideas, and to propose challenges and opportunities in the near future. Submissions to this track are limited to a maximum of 4 pages, using the same <a href="http://www.acm.org/publications/proceedings-template">submission template and are to be submitted using the same <a href="https://easychair.org/account/signin.cgi?timeout=1;key=63054552.eOcq44KCdhw0li5R">submission site</a>. 
+
+	    This year, with support from the Computing Community Consortium (CCC), ACM Hypertext is organizing a special <a href="https://cra.org/ccc/visioning/blue-sky/">Blue Sky Ideas</a> Track. The emphasis of this track is on visionary ideas, long-term challenges, and new research opportunities. This track is designed to overcome the constraints of the traditional review process, and will serve as an incubator for innovative approaches, risky and provocative ideas, and to propose challenges and opportunities in the near future. Submissions to this track are limited to a maximum of 4 pages, using the same submission <a href="http://www.acm.org/publications/proceedings-template">template</a> and are to be submitted using the same <a href="https://easychair.org/conferences/?conf=ht18">submission site</a>. 
 		    Thanks to CCC sponsorship, the top 3 papers submitted to this track will be awarded with travel grants of $1000, $750 and $500 respectively. Successful submissions will be published in the regular proceedings. All submissions to this special track will be evaluated by a dedicated committee consisting of Krishna Gummadi, David Millard, Charlie Hargood, Nishanth Sastry and Ingmar Weber.
  </p>
+            <h3>Deadlines</h3>
+                        <ul>
+                            <li> Submission Deadline :<a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=3&day=2&hour=23&min=59&sec=59&msg=Due%20date%3a%20Blue%20Sky">March 2nd 2018</a></li>
+                            <li> Notification Due by :<a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=4&day=2&hour=23&min=59&sec=59&msg=Acceptance%20date%3a%20Blue%20Sky"> April 2nd 2018 </a></li>
+                            <li> Camera Ready Due by :<a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=5&day=1&hour=23&min=59&sec=59&msg=Camera%20Ready%3a%20Blue%20Sky"> May 1st 2018 </a></li>
+                            <li> Submissions to be done on our <a href="https://easychair.org/conferences/?conf=ht18"> Easy Chair website </a></li>
+			</ul>
+		<h2>Sponsors</h2>
+			<!--p>Hypertext is supported by:</p-->
+			<table>
+				<tr><td><a href="https://cra.org/ccc/visioning/blue-sky/" target="_blank" title=""><img src="https://ht.acm.org/ht2018/images/ccc.jpg" width="250" alt="ACM - Association for Computing Machinery"></a></td>
+			</table>
+
+
+
 </div>
 
 </div> <!-- /.heading-section -->
@@ -659,7 +678,7 @@ http://www.templatemo.com/tm-406-flex
 <tr><td>Bin Guo </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Institut Telecom SudParis </td></tr>
 <tr><td>Andreas Harth </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Karlsruhe Institute of Technology </td></tr>
 <tr><td>Stratis Ioannidis </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Northeastern University </td></tr>
-<tr><td>Clare J. Hooper </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
+<tr><td>Clare J. Hooper </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Independent Consultant </td></tr>
 <tr><td>Dietmar Jannach </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> AAU Klagenfurt </td></tr>
 <tr><td>Min-Yen Kan </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> National University of Singapore </td></tr>
 <tr><td>Akihiro Kashihara </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> The University of Electro-Communications </td></tr>
@@ -695,7 +714,7 @@ http://www.templatemo.com/tm-406-flex
 <tr><td>Simon Walk </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Graz University of Technology </td></tr>
 <tr><td>Mark Weal </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> University of Southampton </td></tr>
 <tr><td>Annika Wolff </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Lappeenranta University of Technology </td></tr>
-<tr><td>Yeliz Yesilada </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> The University of Manchester </td></tr>
+<tr><td>Yeliz Yesilada </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Middle East Technical University Northern Cyprus Campus </td></tr>
 <tr><td>Markus Zanker </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Free University of Bozen-Bolzano </td></tr>
 			</table>
                     </div><!-- /.heading-section -->
