Remove camel case as per Issue #11

--- a/Call_Blue_Sky.html
+++ b/Call_Blue_Sky.html
@@ -6,7 +6,7 @@
 <!-- Authors: Sagar Joglekar and Kiran Garimella -->
     <head>
         <meta charset="utf-8">
-        <title>ACM HyperText 2018</title>
+        <title>ACM Hypertext 2018</title>
     	<meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--
@@ -178,7 +178,7 @@ http://www.templatemo.com/tm-406-flex
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-xs-12 text-left">
-                        <span>Copyright &copy; 2018 ACM HyperText</span>
+                        <span>Copyright &copy; 2018 ACM Hypertext</span>
                   </div> <!-- /.text-center -->
                     <div class="col-md-4 hidden-xs text-right">
                         <a href="index.html" id="go-top">Home</a>
