--- a/index.html
+++ b/index.html
@@ -717,6 +717,8 @@ http://www.templatemo.com/tm-406-flex
 <tr><td>Annika Wolff </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Lappeenranta University of Technology </td></tr>
 <tr><td>Yeliz Yesilada </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Middle East Technical University Northern Cyprus Campus </td></tr>
 <tr><td>Markus Zanker </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Free University of Bozen-Bolzano </td></tr>
+<tr><td>Zhiwei Zhang </td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td> <td> Facebook </td></tr>
+
 			</table>
                     </div><!-- /.heading-section -->
                 </div> <!-- /.row -->
