--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ http://www.templatemo.com/tm-406-flex
                     <h4> Abstract </h4>
                     The workshop aims at uncovering diverse perspectives to defining opinions. How can opinions be better summarized on online forums, in web search results or elsewhere? What relationships can be mapped between exchange of opinions on the web? We invite submissions on all such relatively unexplored dynamics of opinion mining and modeling. We also host a shared task on Review Opinion Diversification, wherein participants are asked to model opinions and mine them from an original dataset of more than 10,000 Amazon annotated   product   reviews.
 
-                    <h3>Human Factors in Hypertext </h3>
+		    <h3><a href="http://human.iisys.de/human18/" target="_blank">Human Factors in Hypertext</a> </h3>
                     <h4>Abstract</h4>
                     HUMAN is the first workshop of a new series for the ACM Hypertext conferences. It has a strong focus on the user and thus is complementary to the strong machine analytics research direction that could be experienced in previous conferences.The user-centric view on hypertext not only includes user interfaces and interaction, but also discussions about hypertext application domains. Furthermore, the workshop raises the question of how original hypertext ideas (e. g., Doug Engelbart’s “augmenting human intellect” or Frank Halasz’ “hypertext as a medium for thinking and communication”) can improve today’s hypertext systems.
 
