--- a/index.html
+++ b/index.html
@@ -290,6 +290,25 @@ http://www.templatemo.com/tm-406-flex
                             </div> <!-- /.team-overlay -->
                         </div> <!-- /.member-thumb -->
                     </div> <!-- /.team-member -->
+
+                    <div class="team-member col-md-3 col-sm-6">
+                        <div class="member-thumb">
+                            <img src="images/keynote3.jpg" alt="">
+                            <div class="team-overlay">
+				    <h3>Leslie Sage</h3>
+				    <span>DevResults</span>
+                                <ul class="social">
+				    <li><a href="https://lesliesage.github.io/" class="fa fa-globe"></a></li>
+                                    <li><a href="https://twitter.com/lesliemsage" class="fa fa-twitter"></a></li>
+                                    <li><a href="https://www.linkedin.com/in/lesliesage" class="fa fa-linkedin"></a></li>
+                                    <!--li><a href="" class="fa fa-linkedin"></a></li-->
+                                </ul>
+                            </div> <!-- /.team-overlay -->
+                        </div> <!-- /.member-thumb -->
+                    </div> <!-- /.team-member -->
+
+
+
                 </div> <!-- /.row -->
 
             </div> <!-- /.container -->
